# rabbitmq

./: pyproject.toml
rabbit/exchange/: emit_log.py  receive_logs.py
rabbit/queue/: consumer.py  producer.py
rabbit/routing/: emit_log_direct.py  receive_logs_direct.py
rabbit/topic/: emit_log_topic.py  receive_logs_topic.py
