[tool.poetry]
name = "rabbit"
version = "0.1.0"
description = ""
authors = ["Adriano R. de Sousa <adrianorodriguesdsousa@ufpi.edu.br>"]
readme = "README.md"
license = "MIT"


[tool.poetry.scripts]
q_consumer = "rabbit.queue.consumer:run"
q_producer = "rabbit.queue.producer:run"
e_emit_log = "rabbit.exchange.emit_log:run"
e_receive_logs = "rabbit.exchange.receive_logs:run"
r_receive_logs_direct = "rabbit.routing.receive_logs_direct:run"
r_emit_log_direct = "rabbit.routing.emit_log_direct:run"
t_receive_logs_topic = "rabbit.topic.receive_logs_topic:run"
t_emit_log_topic = "rabbit.topic.emit_log_topic:run"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
